; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/widgets/extr_menu_widgets.c_menu_widgets_achievement_dismiss.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/widgets/extr_menu_widgets.c_menu_widgets_achievement_dismiss.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { float, i32*, i32, i32*, i32, i32, i32 }

@menu_widgets_achievement_free = common dso_local global i32 0, align 4
@MSG_QUEUE_ANIMATION_DURATION = common dso_local global i32 0, align 4
@EASING_OUT_QUAD = common dso_local global i32 0, align 4
@cheevo_y = common dso_local global i32 0, align 4
@menu_widgets_generic_tag = common dso_local global i32 0, align 4
@cheevo_height = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @menu_widgets_achievement_dismiss to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @menu_widgets_achievement_dismiss(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_3__, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i32, i32* @menu_widgets_achievement_free, align 4
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 6
  store i32 %4, i32* %5, align 8
  %6 = load i32, i32* @MSG_QUEUE_ANIMATION_DURATION, align 4
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 5
  store i32 %6, i32* %7, align 4
  %8 = load i32, i32* @EASING_OUT_QUAD, align 4
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 4
  store i32 %8, i32* %9, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 3
  store i32* @cheevo_y, i32** %10, align 8
  %11 = load i32, i32* @menu_widgets_generic_tag, align 4
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 2
  store i32 %11, i32* %12, align 8
  %13 = load i64, i64* @cheevo_height, align 8
  %14 = trunc i64 %13 to i32
  %15 = sub nsw i32 0, %14
  %16 = sitofp i32 %15 to float
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  store float %16, float* %17, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 1
  store i32* null, i32** %18, align 8
  %19 = call i32 @menu_animation_push(%struct.TYPE_3__* %3)
  ret void
}

declare dso_local i32 @menu_animation_push(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
